text align fix for index

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,7 @@
+main {
+    text-align: center;
+}
+
 input {
     margin-top: 20px;
     width: 215px; 
